# fast-unicode

./: Cargo.toml  README.md
benches/: is_unicode.rs
src/: for_loop.rs  iterators.rs  lib.rs  match_matrix.rs  simple.rs  stdlib.rs
