[package]
name = "fast-unicode"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1.1"
rand = "0.7.2"

[profile.release]
lto = true

[[bench]]
name = "is_unicode"
harness = false
